--- a/go/frontend/static/css/ultilities.module.css
+++ b/go/frontend/static/css/ultilities.module.css
@@ -5,8 +5,30 @@
     font-size: 0;
   }
   
-  .imgOverlayWrap svg {
-    position: absolute;
-    top: 0;
-    left: 0;
-  }
+.imgOverlayWrap svg {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.topBottomContainer {
+  position: relative;
+  display: block;
+  height: 100%;
+}
+
+.hiddenScroll {
+  overflow: hidden;
+  height: 250px;
+}
+
+.scrollable {
+  overflow-y: auto;
+  height: 99%;
+}
+
+.bottomElement {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
