--- a/go/frontend/static/css/ultilities.module.css
+++ b/go/frontend/static/css/ultilities.module.css
@@ -15,6 +15,11 @@
   position: relative;
   display: block;
   height: 100%;
+  background-color: white;
+  border: 1px;
+  border-color: black;
+  border-radius: 10px;
+  padding: 5px;
 }
 
 .hiddenScroll {
